welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:23: error: expected class or object definition
droite();
^Balin:24: error: expected class or object definition
avance();
^Balin:25: error: expected class or object definition
gauche();
^Balin:26: error: expected class or object definition
avance(); 
^Balin:28: error: Unmatched closing brace '}' ignored here
	}
        ^Balin:29: error: eof expected but '}' found.
}
^